--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -202,9 +202,20 @@
     <Compile Include="Migrations\201707310016032_InitialModel.Designer.cs">
       <DependentUpon>201707310016032_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707310036304_CreateGigTable.cs" />
+    <Compile Include="Migrations\201707310036304_CreateGigTable.Designer.cs">
+      <DependentUpon>201707310036304_CreateGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707310054426_OverrideConvetionsForGigsAndGenres.cs" />
+    <Compile Include="Migrations\201707310054426_OverrideConvetionsForGigsAndGenres.Designer.cs">
+      <DependentUpon>201707310054426_OverrideConvetionsForGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -288,6 +299,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707310016032_InitialModel.resx">
       <DependentUpon>201707310016032_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707310036304_CreateGigTable.resx">
+      <DependentUpon>201707310036304_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707310054426_OverrideConvetionsForGigsAndGenres.resx">
+      <DependentUpon>201707310054426_OverrideConvetionsForGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
