--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\201707310220561_PopulateGenresTable.Designer.cs">
       <DependentUpon>201707310220561_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708010059441_AddForeingKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201708010059441_AddForeingKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201708010059441_AddForeingKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -315,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707310220561_PopulateGenresTable.resx">
       <DependentUpon>201707310220561_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708010059441_AddForeingKeyPropertiesToGig.resx">
+      <DependentUpon>201708010059441_AddForeingKeyPropertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
