--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -238,6 +238,8 @@
     <Compile Include="Core\DTOs\GigDto.cs" />
     <Compile Include="Core\DTOs\NotificationDto.cs" />
     <Compile Include="Core\DTOs\UserDto.cs" />
+    <Compile Include="Core\Repositories\INotificationRepository.cs" />
+    <Compile Include="Core\Repositories\IUserNotificationRepository.cs" />
     <Compile Include="Persistence\Migrations\201708082253310_AddIsCanceledToGig.cs" />
     <Compile Include="Persistence\Migrations\201708082253310_AddIsCanceledToGig.Designer.cs">
       <DependentUpon>201708082253310_AddIsCanceledToGig.cs</DependentUpon>
@@ -250,6 +252,8 @@
     <Compile Include="Core\Models\NotificationType.cs" />
     <Compile Include="Core\Models\UserNotification.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
+    <Compile Include="Persistence\Repositories\NotificationRepository.cs" />
+    <Compile Include="Persistence\Repositories\UserNotificationRepository.cs" />
     <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Persistence\Repositories\AttendanceRepository.cs" />
     <Compile Include="Persistence\Repositories\FollowingRepository.cs" />
