Implemented Attendance Controller Tests

--- a/GigHub/tests/GigHub.Tests/GigHub.Tests.csproj
+++ b/GigHub/tests/GigHub.Tests/GigHub.Tests.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Api\GigsControllerTests.cs" />
+    <Compile Include="Controllers\Api\AttendancesControllerTests.cs" />
     <Compile Include="Controllers\Extensions\ApiControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
