--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Persistence\EntityConfigurations\GigConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\NotificationConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\UserNotificationConfiguration.cs" />
+    <Compile Include="Persistence\IApplicationDbContext.cs" />
     <Compile Include="Persistence\Migrations\201708082253310_AddIsCanceledToGig.cs" />
     <Compile Include="Persistence\Migrations\201708082253310_AddIsCanceledToGig.Designer.cs">
       <DependentUpon>201708082253310_AddIsCanceledToGig.cs</DependentUpon>
